--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>esercizio bootstrap</title>
 </head>
 <body>
@@ -71,7 +72,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h3>portfolio</h3>
+                        <h2>portfolio</h2>
                         <h3 class="stacco">
                             <span class="stellab">&#9733;</span>
                         </h3>
@@ -111,18 +112,36 @@
         </section>
 
 
-        <div class="about text-center">
-            <div class="titolopiccolo">about</div>
-            <div class="row justify-content-center g-2">
-                <div class="col-12 col-md-6">
-                    <div class="boxheight"></div>
-                </div>
-                <div class="col-12 col-md-6">
-                    <div class="boxheight"></div>
+        <section id="about" class="text-center">
+            <div class="container">
+                <div class="row text-uppercase">
+                    <h2>about</h2>
+                    <h3 class="stacco">
+                        <span class="stellav">&#9733;</span>
+                    </h3>
                 </div>
             </div>
 
-        </div>
+            <div class="container">
+                <div class="row g-3">
+                    <div class="col-12 offset-md-2 col-md-4">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, placeat perspiciatis. Ut facilis quia illo optio, rem impedit sequi iste dolores voluptate nulla unde nemo suscipit error temporibus esse voluptatum.</p>
+                    </div>
+    
+                    <div class="col-12 col-md-4">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quam, consequuntur at eaque libero quidem sed debitis rerum temporibus, voluptatibus dolorem distinctio voluptatem similique perspiciatis atque illo molestiae sunt aperiam.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <a class="rounded" href=""><i class="fas fa-download"></i> Download</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <div class="contact text-center">
             contact
@@ -132,16 +151,19 @@
 
     <footer>
         <div class="topfoot">
-            <div class="row justify-content-center text-center g-2">
-                <div class="col-12 col-md-4 ">
-                    <div class="boxheight"></div>
+            <div class="container">
+                <div class="row justify-content-center text-center g-2">
+                    <div class="col-12 col-md-4 ">
+                        <div class="boxheight"></div>
+                    </div>
+                    <div class="col-12 col-md-4 ">
+                        <div class="boxheight"></div>
+                    </div>
+                    <div class="col-12 col-md-4 ">
+                        <div class="boxheight"></div>
+                    </div>
                 </div>
-                <div class="col-12 col-md-4 ">
-                    <div class="boxheight"></div>
-                </div>
-                <div class="col-12 col-md-4 ">
-                    <div class="boxheight"></div>
-                </div>
+
             </div>
 
         </div>
