--- a/index.html
+++ b/index.html
@@ -192,15 +192,34 @@
     <footer>
         <div class="topfoot">
             <div class="container">
-                <div class="row justify-content-center text-center g-2">
+                <div class="row text-center g-2">
                     <div class="col-12 col-md-4 ">
-                        <div class="boxheight"></div>
+                        <h4 class="text-uppercase">location</h4>
+                        <span>2215 john daniel drive park, <br> MO 54243</span>
                     </div>
+
                     <div class="col-12 col-md-4 ">
-                        <div class="boxheight"></div>
+                        <h4 class="text-uppercase">around the web</h4>
+                        <div class="icona">
+                            <i class="fab fa-facebook-f"></i>
+                        </div>
+
+                        <div class="icona">
+                            <i class="fab fa-google-plus-g"></i>
+                        </div>
+
+                        <div class="icona">
+                            <i class="fab fa-twitter"></i>
+                        </div>
+
+                        <div class="icona">
+                            <i class="fab fa-linkedin-in"></i>
+                        </div>
                     </div>
+
                     <div class="col-12 col-md-4 ">
-                        <div class="boxheight"></div>
+                        <h4 class="text-uppercase">about freelancer</h4>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <span id="green">Start Bootstrap</span>.</p>
                     </div>
                 </div>
 
@@ -208,8 +227,8 @@
 
         </div>
 
-        <div class="botfoot">
-            
+        <div class="botfoot d-flex justify-content-center align-items-center">
+            <span>Copyright &#xa9; Your Website 2019</span>
         </div>
         
     </footer>
